fixed log section overflow

--- a/frontend/src/tasks/_log.scss
+++ b/frontend/src/tasks/_log.scss
@@ -30,6 +30,7 @@
   .tasks-table {
     border-collapse: collapse;
     border-spacing: 0 10px;
+    max-height: 265px;
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
